# nico

./: .gitignore  .prettierrc  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  tests.yml
__tests__/: language-server.test.ts  main.test.ts  runner.test.ts
__tests__/__snapshots__/: runner.test.ts.snap
__tests__/input/: case_0.nico  fib_rec.nico  fizzbuzz.nico  fun_55.nico  fun_if.nico  fun_square.nico  fun_string.nico  let_0.nico  let_scoping.nico  more_than_one_expr.nico  more_than_one_fun.nico
__tests__/language-server/: completion.test.ts  hover.test.ts  initialize.test.ts  prepare-rename.test.ts  publish-diagnostics.test.ts  rename.test.ts  semantic-token.test.ts
__tests__/language_server/: completion.test.ts  hover.test.ts  initialize.test.ts  prepare_rename.test.ts  publish_diagnostics.test.ts  rename.test.ts  semantic-token.test.ts
__tests__/util/: compiler.ts  lsp.ts  runtime.ts  testcase.ts
runner/: cli.ts  index.ts  runtime.ts
samples/: fib.nico  fizzbuzz.nico  max.nico  struct.nico  struct_pattern.nico  sum.nico
samples_2021/: fib.nico  fizzbuzz.nico  max.nico  struct.nico  struct_pattern.nico  sum.nico
src/: analyzer.rs  arena.rs  asm.rs  compiler.rs  language_server.rs  lib.rs  ls.rs  main.rs  parser.rs  sem.rs  semantic.rs  syntax.rs  tokenizer.rs  util.rs
src/asm/: allocator.rs  emitter.rs  mod.rs  wasm.rs
src/compiler/: backend_2021_spring.rs  backend_2021_summer.rs  cli.rs
src/language_server/: completion.rs  description.rs  hover.rs  rename.rs  server.rs  (+1 more)
test/: main.test.ts
(+37 files in other folders)
