[package]
name = "nico"
version = "0.1.0"
authors = ["Takanori Ishikawa <ishikawa_takanori@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nico
assert_matches = "1.4.0"
# nico-ls
log = "0.4.14"
env_logger = "0.8.3"
serde_json = "1.0.64"
