[package]
name = "nico"
version = "0.1.0"
authors = ["Takanori Ishikawa <ishikawa_takanori@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nico
bumpalo = { version = "3.6.1", features = ["boxed", "collections"] }
assert_matches = "1.5.0"
thiserror = "1.0.24"
# nico-ls
log = "0.4.14"
env_logger = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
lsp-types = "0.88.0"
url = "2.2"